--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sampul Paspor</title>
+    <title>Sampul Passport.id</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <header class="navbar">
-        <p class="title_bar">Paspor</p>
+        <p class="title_bar">Passport</p>
         <div class="navbar_container">
             <ul class="navbar_menu">
                 <li class="navbar_item"><a href="#home" class="navbar_links">Home</a></li>
